# home-assistant-addons

./: .gitignore  IMPLEMENTATION_SUMMARY.md  INFLUXDB_DETECTION.md  README.md  go.mod  go.sum  pyproject.toml  repository.yaml  test-addon-fix.go
.github/: copilot-instructions.md
.github/workflows/: builder.yml  release.yml
addons/alphaess/: Dockerfile  README.md  build.yml  config.yaml
addons/gateway/: Dockerfile  apparmor.txt  build.yml  config.yaml  run.sh
addons/mqtt-bridge/: Dockerfile  build.yml  config.yaml
addons/security/: Dockerfile  build.yml  config.yaml
docs/gateway/: README.md
examples/: addon-discovery-demo.md  test-addon-discovery.go  test-influxdb-detection.go  test-startup-metric.go
go/acme/: acme.go
go/addons/: addon.go  endpoints.go
go/auth/: client.go  config.go  request.go  server.go  users.go
go/crypto/: cert.go  csr.go  key.go
go/dns/: client.go  externalip.go  server.go
go/ftp/: server.go
go/gateway/: config.go  dns.go  domains.go  endpoints.go  gateway.go  metrics.go  server.go
go/gatewayconfig/: server.go
go/ginutil/: embed.go
go/homeassistant/: homeassistant.go
go/httpbin/: httpbin.go
go/mqtt-bridge/: enpoints.go  measurements.go  server.go  topics.go
go/network/: connwrapper.go  handler.go  httptohttps.go  listener.go  metric.go  reverseproxy.go  tlsproxy.go
go/pki/: pki.go
go/security/: endpoints.go  (+1 more)
scripts/: build  cleanup-ghcr  get-ha-db  get-ha-secret  install  install-gateway  install-mqtt-bridge  install-security  install_local  prepare-addon  prepare-addon.sh  prepare-embed  serve
(+168 files in other folders)
