
[project]

name = "home-assistant-addons"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
ha-build = "ha_addons.build:main"
ha-install = "ha_addons.install:main"
ha-serve = "ha_addons.serve:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["python/ha_addons"]

[tool.uv]
link-mode = "copy"
